k8s/poller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poller
  namespace: printfarm

spec:
  replicas: 1

  selector:
    matchLabels:
      app: poller

  template:
    metadata:
      labels:
        app: poller

    spec:
      containers:
        - name: poller
          image: saralray/printfarm-poller:latest
          imagePullPolicy: Always

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"

            limits:
              memory: "128Mi"
              cpu: "200m"
