k8s/exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exporter
  namespace: printfarm

spec:
  replicas: 1

  selector:
    matchLabels:
      app: exporter

  template:
    metadata:
      labels:
        app: exporter

    spec:
      containers:
        - name: exporter
          image: saralray/printfarm-exporter:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 9180

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"

            limits:
              memory: "128Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: exporter
  namespace: printfarm
spec:
  selector:
    app: exporter

  ports:
    - port: 9180
      targetPort: 9180
