k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: printfarm

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: web
          image: saralray/printfarm-web:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5173

          readinessProbe:
            httpGet:
              path: /healthz
              port: 5173
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 5173
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: printfarm

spec:
  selector:
    app: web

  ports:
    - port: 5173
      targetPort: 5173
